--- a/todo_list/templates/base.html
+++ b/todo_list/templates/base.html
@@ -13,8 +13,8 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">To-Do List</a>
-          
+          <a class="navbar-brand" href="{% url 'home' %}">To-Do List</a>
+
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -22,17 +22,22 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
              
+              
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Add item" aria-label="Search">
+            <form class="d-flex" method="POST">
+                {% csrf_token %}
+              <input class="form-control me-2" type="search" placeholder="Add item" aria-label="Search" name="item">
               <button class="btn btn-outline-secondary" type="submit">Add</button>
             </form>
           </div>
         </div>
       </nav>
-    {% block content %}
-    {% endblock  %}
-    
+      <br/>
+
+    <div class="container">
+        {% block content %}
+        {% endblock  %}
+    </div>      
 
     <!-- Optional JavaScript; choose one of the two! -->
 
