--- a/todo_list/templates/home.html
+++ b/todo_list/templates/home.html
@@ -13,15 +13,25 @@
 {% endif %}
 
 {% if all_items %}
+<table class="table table-striped">
     {% for things in all_items %}
-        <table class="table table-striped">
-        <tr>
+        {% if things.completed %}
+        <tr class= "table-secondary">
             <td>{{ things.item }}</td>
-            <td><center>{{ things.completed}}</center></td> 
+            <td><center><a href="{% url 'uncross' things.id %}">Uncross</a></center></td> 
             <td><center><a href="{% url 'delete' things.id %}">Delete</a></center></td>
         </tr>
+        {% else %}
+            <tr>
+                <td>{{ things.item }}</td>
+                <td><center><a href="{% url 'cross_off' things.id %}">Cross Off</a></center></td> 
+                <td><center><a href="{% url 'delete' things.id %}">Delete</a></center></td>
+            </tr>
+        {% endif %}    
+
+    {% endfor %}        
     </table>
-    {% endfor %} 
+   
 {% endif %}
 
 {%  endblock  %}
