--- a/todo_list/templates/home.html
+++ b/todo_list/templates/home.html
@@ -17,7 +17,7 @@
     {% for things in all_items %}
         {% if things.completed %}
         <tr class= "table-secondary">
-            <td>{{ things.item }}</td>
+            <td class="striker">{{ things.item }}</td>
             <td><center><a href="{% url 'uncross' things.id %}">Uncross</a></center></td> 
             <td><center><a href="{% url 'delete' things.id %}">Delete</a></center></td>
         </tr>
