--- a/todo_list/templates/base.html
+++ b/todo_list/templates/base.html
@@ -1,3 +1,4 @@
+{% load static%}
 <!doctype html>
 <html lang="en">
   <head>
@@ -7,6 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/my_css.css' %}">
 
     <title>To-do list</title>
   </head>
